Replace manual logger initialization with Lombok @Slf4j annotation
Replaced explicit logger instances with the Lombok @Slf4j annotation for simplicity and cleaner code. Adjusted logging levels and logging statements in multiple service classes for consistency. Added configuration files for logging levels and updated data.json with new test data.